# openblack

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: ci-cross-compile.yml  ci-system-deps.yml  ci-vcpkg.yml
.vcpkg/ports/bgfx/: bgfx-Add-BGFX_MULTITHREADED-option.patch  portfile.cmake  vcpkg.json
CMakeModules/: Findspdlog.cmake  Shaders.cmake
android/: gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/libsdl/app/: HIDDeviceManager.java  OpenBlackActivity.java  SDLActivity.java
android/gradle/wrapper/: gradle-wrapper.properties
apps/erctool/: CMakeLists.txt  erctool.cpp
apps/packtool/: packtool.cpp
azure-pipelines/templates/: test-null-renderer.yml
cmake/: Shaders.cmake
components/erc/: CMakeLists.txt
components/erc/include/: ERCFile.h
components/erc/src/: ERCFile.cpp
components/pack/include/: PackFile.h
components/pack/src/: PackFile.cpp
src/: CMakeLists.txt  Console.cpp  Enums.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  GitSHA1.cpp  Gui.cpp  InfoConstants.cpp  InfoConstants.h  Level.cpp  Locator.cpp  Locator.h  MeshViewer.cpp  MeshViewer.h  OpenXRManager.cpp  OpenXRManager.h  Profiler.cpp  Profiler.h  Renderer.cpp  Renderer.h  main.cpp
src/3D/: AxisAlignedBoundingBox.h  Camera.cpp  Camera.h  L3DMesh.cpp  L3DMesh.h  L3DSubMesh.cpp  L3DSubMesh.h  LandBlock.cpp  LandBlock.h  LandIsland.cpp  LandIsland.h  MeshPack.h  Water.cpp  Water.h
src/Audio/: MpegAudioDecoder.cpp
src/Camera/: Camera.cpp  Camera.h  CameraModel.cpp  CameraModel.h  DefaultWorldCameraModel.cpp  DefaultWorldCameraModel.h  OldCameraModel.cpp  OldCameraModel.h  ReflectionCamera.cpp  ReflectionCamera.h  ReflectionXZCamera.cpp  ReflectionXZCamera.h
src/Common/: EventManager.h  MeshLookup.cpp  Spiral.cpp  Spiral.h  StringUtils.cpp  StringUtils.h
src/Debug/: Console.cpp  Gui.cpp  Gui.h  MeshViewer.cpp
src/ECS/: Map.cpp  Registry.h
src/ECS/Archetypes/: Utils.cpp
src/ECS/Components/: Fixed.h
src/ECS/Systems/: PathfindingSystem.cpp
src/Entities/: Map.cpp  Map.h  Registry.cpp  Registry.h
src/Entities/Components/: Abode.cpp  Abode.h  Field.h  Fixed.cpp  Fixed.h  Footpath.cpp  Footpath.h  Mesh.cpp  Mesh.h  Mobile.cpp  Mobile.h  Town.cpp  Town.h  Transform.cpp  Transform.h  Villager.cpp  Villager.h
src/FileSystem/: DefaultFileSystem.cpp  DefaultFileSystem.h  FileStream.cpp  FileSystemInterace.cpp  FileSystemInterface.h  IStream.h
src/Graphics/: Mesh.cpp  ShaderIncluder.h  ShaderManager.cpp
src/Gui/: DebugWindow.h  Gui.cpp  Gui.h  LHVMViewer.cpp  MeshViewer.cpp  PathFinding.cpp  PathFinding.h  Profiler.cpp
src/Input/: GameActionMap.cpp  GameActionMap.h  GameActionMapInterface.h
src/LHScriptX/: FeatureScriptCommands.cpp  FeatureScriptCommands.h
src/Resources/: ResourceManager.h
src/Serializer/: FotFile.cpp  GameThingSerializer.cpp
src/ipc/: EnetIpc.cpp  EnetIpc.h  IpcInterface.cpp  IpcInterface.h
src/ipc/blackhack/: CameraMode.h  CameraModeNew3.h  ControlMap.h  types.h
src/ipc/blackhack/lhlib/: LHCoord.h  LHMatrix.h  LHPoint.h  Zoomer.h
test/: CMakeLists.txt  test_fixed.cpp
test/mobile_wall_hug/: test_mobile_wall_hug.cpp
test/mobile_wall_hug/scenarios/: mobilewallhug1.txt  mobilewallhug2.txt
test/mock/: CMakeLists.txt  gen_meshes.py
